--- a/xanmod-llvm/PKGBUILD
+++ b/xanmod-llvm/PKGBUILD
@@ -27,6 +27,11 @@ if [ -z ${_compiler+x} ]; then
   _compiler=clang
 fi
 
+# Compress modules with ZSTD (to save disk space)
+if [ -z ${_compress_modules+x} ]; then
+  _compress_modules=n
+fi
+
 # Compile ONLY used modules to VASTLY reduce the number of modules built
 # and the build time.
 #
@@ -51,6 +56,7 @@ _branch=5.x
 xanmod=1
 pkgrel=${xanmod}
 pkgdesc='Linux Xanmod Build By Clang'
+_patches_url="https://gitlab.com/sirlucjan/kernel-patches/-/raw/master/${_major}"
 url="http://www.xanmod.org/"
 arch=(x86_64)
 
@@ -69,6 +75,7 @@ _srcname="linux-${pkgver}-xanmod${xanmod}"
 source=("https://cdn.kernel.org/pub/linux/kernel/v${_branch}/linux-${_major}.tar."{xz,sign}
         "https://github.com/xanmod/linux/releases/download/${pkgver}-xanmod${xanmod}/patch-${pkgver}-xanmod${xanmod}.xz"
         "https://github.com/HougeLangley/customkernel/releases/download/v${_major}-patch/v1-cjktty-${_major}.patch"
+        "0001-zstd.patch::${_patches_url}/zstd-patches/0001-zstd-patches.patch"
         choose-gcc-optimization.sh)
 validpgpkeys=(
     'ABAF11C65A2970B130ABE3C479BE3E4300411886' # Linus Torvalds
@@ -79,6 +86,7 @@ sha256sums=('027d7e8988bb69ac12ee92406c3be1fe13f990b1ca2249e226225cd1573308bb'
             'SKIP'
             '761d5f1c5d087b7e06d3bc00eba8dbc25651257037f88a082c9332f2a62bf866'
             'cc5b2dffc231aef1aa950ba0f1b8d078c0d24f190e33f7b217f10d5d4c705122'
+            '3943e79b966f4ae25cea0ef8536e789f0b07f8f3a5517ddf6338b94616ab160a'
             '1ac18cad2578df4a70f9346f7c6fccbb62f042a0ee0594817fdef9f2704904ee')
 
 export KBUILD_BUILD_HOST=${KBUILD_BUILD_HOST:-archlinux}
@@ -135,6 +143,26 @@ prepare() {
     echo "Disabling NUMA..."
     scripts/config --disable CONFIG_NUMA
   fi
+
+  # Compress modules by default (following Arch's kernel)
+  if [ "$_compress_modules" = "y" ]; then
+    scripts/config --enable CONFIG_MODULE_COMPRESS_ZSTD
+  fi
+
+  msg2 "Enable zram compression to ZSTD"
+  scripts/config --disable CONFIG_ZRAM_DEF_COMP_LZORLE
+  scripts/config --enable CONFIG_ZRAM_DEF_COMP_ZSTD
+  scripts/config --set-str CONFIG_ZRAM_DEF_COMP zstd
+
+  scripts/config --disable CONFIG_ZSWAP_COMPRESSOR_DEFAULT_LZ4
+  scripts/config --enable CONFIG_ZSWAP_COMPRESSOR_DEFAULT_ZSTD
+  scripts/config --set-str CONFIG_ZSWAP_COMPRESSOR_DEFAULT zstd
+
+  msg2 "Change module compression to ZSTD"
+  scripts/config --disable CONFIG_MODULE_COMPRESS_NONE
+  scripts/config --enable CONFIG_MODULE_COMPRESS_ZSTD
+  scripts/config --enable CONFIG_MODULE_COMPRESS_ZSTD_ULTRA
+  scripts/config --set-val CONFIG_MODULE_COMPRESS_ZSTD_LEVEL 3
 
   # Let's user choose microarchitecture optimization in GCC
   sh ${srcdir}/choose-gcc-optimization.sh $_microarchitecture
