--- a/xanmod-llvm/PKGBUILD
+++ b/xanmod-llvm/PKGBUILD
@@ -75,6 +75,7 @@ _srcname="linux-${pkgver}-xanmod${xanmod}"
 source=("https://cdn.kernel.org/pub/linux/kernel/v${_branch}/linux-${_major}.tar."{xz,sign}
         "https://github.com/xanmod/linux/releases/download/${pkgver}-xanmod${xanmod}/patch-${pkgver}-xanmod${xanmod}.xz"
         "0001-zstd.patch::${_patches_url}/zstd-patches/0001-zstd-patches.patch"
+        "0002-btrfs.patch::${_patches_url}/btrfs-patches/0001-btrfs-patches.patch"
         choose-gcc-optimization.sh)
 validpgpkeys=(
     'ABAF11C65A2970B130ABE3C479BE3E4300411886' # Linus Torvalds
@@ -85,6 +86,7 @@ sha256sums=('555fef61dddb591a83d62dd04e252792f9af4ba9ef14683f64840e46fa20b1b1'
             'SKIP'
             'fe16b85a560b4a36f6855361fe10891d11614ad93d99b243dbcce9004979748d'
             '98bcd7467b0ac9c6f2db4b38c590bf6db7f6dbd58e66e56459efcb31329cb213'
+            'd9833802d28179fab820d5f511c68d78e45942d8ad9912952d844d8c31816bd6'
             '1ac18cad2578df4a70f9346f7c6fccbb62f042a0ee0594817fdef9f2704904ee')
 
 export KBUILD_BUILD_HOST=${KBUILD_BUILD_HOST:-archlinux}
